[metadata]
name = colcon-ros-buildfarm
version = attr: colcon_ros_buildfarm.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-buildfarm/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-ros-buildfarm/
author = Scott K Logan
author_email = logans@cottsay.net
maintainer = Scott K Logan
maintainer_email = logans@cottsay.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extensions for colcon to utilize ros_buildfarm to build system packages in containers.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  colcon-package-selection
  PyYAML
  rosdistro
packages = find:
zip_safe = true

[options.extras_require]
rpm =
  createrepo_c
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-ros-buildfarm

[options.entry_points]
colcon_core.extension_point =
    colcon_ros_buildfarm.config_augmentation = colcon_ros_buildfarm.config_augmentation:ConfigAugmentationExtensionPoint
    colcon_ros_buildfarm.package_discovery = colcon_ros_buildfarm.package_discovery:BuildfarmPackageDiscoveryExtensionPoint
    colcon_ros_buildfarm.package_repository = colcon_ros_buildfarm.package_repository:PackageRepositoryExtensionPoint
    colcon_ros_buildfarm.package_repository.local = colcon_ros_buildfarm.package_repository.local:LocalPackageRepositoryExtensionPoint
    colcon_ros_buildfarm.package_selection = colcon_core.package_selection:PackageSelectionExtensionPoint
    colcon_ros_buildfarm.task.build = colcon_core.task:TaskExtensionPoint
colcon_core.event_handler =
    local_repo = colcon_ros_buildfarm.package_repository.local:LocalPackageRepository
colcon_core.verb =
    ros-buildfarm = colcon_ros_buildfarm.verb.ros_buildfarm:RosBuildfarmVerb
colcon_ros_buildfarm.config_augmentation =
    drop_jenkins = colcon_ros_buildfarm.config_augmentation.drop_jenkins:DropJenkinsConfigAugmentation
    drop_unused = colcon_ros_buildfarm.config_augmentation.drop_unused:DropUnusedConfigAugmentation
    local_repo = colcon_ros_buildfarm.package_repository.local:LocalPackageRepository
    missing_from_repo = colcon_ros_buildfarm.package_selection.missing_from_repo:MissingFromRepoPackageSelection
colcon_ros_buildfarm.package_discovery =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
    config = colcon_ros_buildfarm.package_discovery.config:ConfigPackageDiscovery
colcon_ros_buildfarm.package_repository =
    local = colcon_ros_buildfarm.package_repository.local:LocalPackageRepository
colcon_ros_buildfarm.package_repository.local =
    rpm = colcon_ros_buildfarm.package_repository.local.rpm:LocalRpmPackageRepository
colcon_ros_buildfarm.package_selection =
    missing_from_repo = colcon_ros_buildfarm.package_selection.missing_from_repo:MissingFromRepoPackageSelection
colcon_ros_buildfarm.task.build =
    ros_buildfarm.release = colcon_ros_buildfarm.task.release.build:BuildfarmReleaseBuildTask

[flake8]
import-order-style = google

[coverage:run]
source = colcon_ros_buildfarm
